# fullnode

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/dex/: Cargo.toml
crates/dex/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/keymanager/: Cargo.toml
crates/keymanager/src/: lib.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/statedb/: Cargo.toml
crates/statedb/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: account.rs  address.rs  block.rs  hash.rs  lib.rs  primitives.rs  receipt.rs  transaction.rs
infra/: entrypoint.sh
infra/prometheus/: prometheus.yml
k8s/: 00-namespace.yaml  01-bootnode.yaml  02-validator.yaml  03-rpc-gateway.yaml  04-archive.yaml  05-monitoring.yaml
