[workspace]
members = [
    "crates/p2p",
    "crates/mempool",
    "crates/consensus",
    "crates/execution",
    "crates/statedb",
    "crates/rpc",
    "crates/indexer",
    "crates/sync",
    "crates/keymanager",
    "crates/monitoring",
    "crates/dex",
    "crates/common",
    "crates/node",
    "crates/types",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1.36", features = ["full"] }
tokio-util  = { version = "0.7",  features = ["codec"] }
futures     = "0.3"
async-trait = "0.1"
anyhow      = "1.0"
thiserror   = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
bytes       = "1.5"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap     = "5.5"
parking_lot = "0.12"
hex         = "0.4"
sha3        = "0.10"
sha2        = "0.10"
rlp         = "0.5"
primitive-types = { version = "0.12", features = ["serde"] }
rocksdb     = "0.21"
lru         = "0.12"
prometheus  = { version = "0.13", features = ["process"] }
axum        = { version = "0.7",  features = ["ws"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }
rand        = "0.8"
secp256k1   = { version = "0.28", features = ["rand", "recovery", "global-context"] }
k256        = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
blst        = "0.3"
aes         = "0.8"
scrypt      = "0.11"
zeroize     = { version = "1.7", features = ["derive"] }
num-bigint  = "0.4"
num-traits  = "0.2"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1.7", features = ["v4"] }
smallvec    = "1.13"
crossbeam-channel = "0.5"
rayon       = "1.8"
once_cell   = "1.19"
clap        = { version = "4.5", features = ["derive", "env"] }
