[package]
name = "fullnode-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
