[package]
name    = "fullnode-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
sha3         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
rlp          = { workspace = true }
primitive-types = { workspace = true }
k256         = { workspace = true }
